--- a/Exemplo08/app/src/main/AndroidManifest.xml
+++ b/Exemplo08/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ScrollViewActivity"
+            android:label="@string/scrollview" />
+        <activity android:name=".ScrollViewInflateActivity"></activity>
     </application>
 
 </manifest>
