Adicionando novas views ao Exemplo 12

--- a/Exemplo12/app/src/main/AndroidManifest.xml
+++ b/Exemplo12/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".AutoCompleteViewActivity" />
-        <activity android:name=".AdapterInflateActivity"></activity>
+        <activity android:name=".AdapterInflateActivity" />
+        <activity android:name=".ImageButtonActivity" />
+        <activity android:name=".CheckButtonActivity" />
     </application>
 
 </manifest>
