Correção de nome das classes Activity no Exemplo17

--- a/Exemplo17/app/src/main/AndroidManifest.xml
+++ b/Exemplo17/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ListarDepartamentos" />
-        <activity android:name=".AdicionarDepartamento"></activity>
+        <activity android:name=".ListarDepartamentosActivity" />
+        <activity android:name=".AdicionarDepartamentoActivity"></activity>
     </application>
 
 </manifest>
